--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,7 @@
-#u895:active
-{
-	background: url("../images/u895-m.png") no-repeat 0px 0px;
-}
-
-#u897:active
-{
-	background: url("../images/u897-m.png") no-repeat 0px 0px;
-}
-
 .version.index /* version checker */
 {
-	color: #0000F3;
-	background-color: #10648A;
+	color: #0000ED;
+	background-color: #1FF510;
 }
 
 .html
@@ -40,7 +30,7 @@
 
 #u1412
 {
-	z-index: 88;
+	z-index: 90;
 	width: 1020px;
 	border-style: none;
 	border-color: transparent;
@@ -54,7 +44,7 @@
 
 #u903
 {
-	z-index: 89;
+	z-index: 91;
 	width: 1020px;
 	border-style: none;
 	border-color: transparent;
@@ -68,7 +58,7 @@
 
 #u1208
 {
-	z-index: 117;
+	z-index: 119;
 	width: 220px;
 	background-color: transparent;
 	position: fixed;
@@ -79,7 +69,7 @@
 
 #menuu873
 {
-	z-index: 90;
+	z-index: 92;
 	width: 542px;
 	border-color: #000000;
 	background-color: transparent;
@@ -109,7 +99,7 @@
 	border-width: 0px 1px 0px 0px;
 }
 
-#u882:active
+#u882:hover
 {
 	width: 192px;
 	min-height: 0px;
@@ -123,8 +113,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
+	color: #C8C8C8;
 	line-height: 22px;
-	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -134,7 +124,7 @@
 	left: 59px;
 }
 
-#u882:active #u884-4
+#u882:hover #u884-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -142,9 +132,9 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u882:active #u884-4 p
+#u882:hover #u884-4 p
 {
-	color: #AF272D;
+	color: #FFFFFF;
 	visibility: inherit;
 }
 
@@ -176,8 +166,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
+	color: #C8C8C8;
 	line-height: 22px;
-	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -187,7 +177,7 @@
 	left: 59px;
 }
 
-#u882.MuseMenuActive #u884-4,#u877:active #u878-4
+#u882.MuseMenuActive #u884-4,#u877:hover #u878-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -195,9 +185,9 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u877:active #u878-4 p
+#u877:hover #u878-4 p
 {
-	color: #AF272D;
+	color: #FFFFFF;
 	visibility: inherit;
 }
 
@@ -227,8 +217,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
+	color: #C8C8C8;
 	line-height: 22px;
-	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -238,7 +228,7 @@
 	left: 58px;
 }
 
-#u877.MuseMenuActive #u878-4,#u889:active #u891-4
+#u877.MuseMenuActive #u878-4,#u889:hover #u891-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -246,15 +236,15 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u889:active #u891-4 p
+#u889:hover #u891-4 p
 {
-	color: #AF272D;
+	color: #FFFFFF;
 	visibility: inherit;
 }
 
 #u882.MuseMenuActive #u884-4 p,#u877.MuseMenuActive #u878-4 p,#u889.MuseMenuActive #u891-4 p
 {
-	color: #FFFFFF;
+	color: #9B272D;
 	visibility: inherit;
 }
 
@@ -265,7 +255,7 @@
 
 #u899
 {
-	z-index: 115;
+	z-index: 117;
 	width: 39px;
 	background-color: transparent;
 	position: fixed;
@@ -294,7 +284,7 @@
 
 #u897
 {
-	z-index: 110;
+	z-index: 112;
 	height: 58px;
 	width: 58px;
 	vertical-align: top;
@@ -305,9 +295,14 @@
 	background: url("../images/u897.png") no-repeat 9px 9px;
 }
 
+#u897:hover
+{
+	background: url("../images/u897-r.png") no-repeat 0px 0px;
+}
+
 #u895
 {
-	z-index: 113;
+	z-index: 115;
 	height: 58px;
 	width: 58px;
 	vertical-align: top;
@@ -316,6 +311,11 @@
 	left: 50%;
 	margin-left: 362px;
 	background: url("../images/u895.png") no-repeat 9px 9px;
+}
+
+#u895:hover
+{
+	background: url("../images/u895-r.png") no-repeat 0px 0px;
 }
 
 #pmatthew
@@ -334,7 +334,7 @@
 
 #u977
 {
-	z-index: 119;
+	z-index: 121;
 	width: 1020px;
 	height: 140px;
 	border-style: none;
@@ -388,7 +388,14 @@
 	padding-bottom: 18px;
 }
 
-#u882.MuseMenuActive,#u1511:active
+#u882.MuseMenuActive,#u1511:hover
+{
+	width: 192px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1511:active
 {
 	width: 192px;
 	min-height: 0px;
@@ -411,7 +418,15 @@
 	left: 59px;
 }
 
-#u889.MuseMenuActive #u891-4,#u1511:active #u1513-4
+#u889.MuseMenuActive #u891-4,#u1511:hover #u1513-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 22px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1511:active #u1513-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -456,7 +471,15 @@
 	left: 59px;
 }
 
-#u1511.MuseMenuActive #u1513-4,#u1520:active #u1521-4
+#u1511.MuseMenuActive #u1513-4,#u1520:hover #u1521-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 22px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1520:active #u1521-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -497,7 +520,15 @@
 	left: 58px;
 }
 
-#u1520.MuseMenuActive #u1521-4,#u1504:active #u1505-4
+#u1520.MuseMenuActive #u1521-4,#u1504:hover #u1505-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 22px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1504:active #u1505-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -515,7 +546,7 @@
 
 #u1499
 {
-	z-index: 84;
+	z-index: 86;
 	width: 39px;
 	margin-right: -10000px;
 	margin-top: 5px;
@@ -540,7 +571,7 @@
 
 #u1526
 {
-	z-index: 82;
+	z-index: 83;
 	height: 58px;
 	width: 58px;
 	margin-bottom: -4px;
@@ -551,7 +582,7 @@
 
 #u1528
 {
-	z-index: 86;
+	z-index: 88;
 	width: 220px;
 	margin-right: -10000px;
 	margin-top: 5px;
@@ -814,6 +845,15 @@
 	position: relative;
 }
 
+#u989:hover
+{
+	-pie-box-shadow: none;
+	-moz-box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 14px 14px 15px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	margin: 15px 0px 0px 30px;
+}
+
 #pu975-4
 {
 	width: 0.01px;
@@ -851,6 +891,15 @@
 	position: relative;
 }
 
+#u995:hover
+{
+	-pie-box-shadow: none;
+	-moz-box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 14px 14px 15px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	margin: 66px 0px 0px;
+}
+
 #u1001
 {
 	z-index: 54;
@@ -864,6 +913,15 @@
 	margin-right: -10000px;
 	margin-top: 128px;
 	left: 740px;
+}
+
+#u1001:hover
+{
+	-pie-box-shadow: none;
+	-moz-box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 14px 14px 15px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 14px 14px 15px rgba(0, 0, 0, 0.5);
+	margin: 128px -10000px 0px 0px;
 }
 
 #pu1049,#pmedia,#pu1047
