--- a/css/master_b-master.css
+++ b/css/master_b-master.css
@@ -1,18 +1,3 @@
-#u1180:active
-{
-	background: url("../images/u1180-m.png") no-repeat 0px 0px;
-}
-
-#u1415:active
-{
-	background: url("../images/u1415-m.png") no-repeat 0px 0px;
-}
-
-#u1178:active
-{
-	background: url("../images/u1178-m.png") no-repeat 0px 0px;
-}
-
 #u1159-4
 {
 	background-color: transparent;
@@ -31,6 +16,16 @@
 	background: url("../images/u1415.png") no-repeat 9px 9px;
 }
 
+#u1415:hover
+{
+	background: url("../images/u1415-r.png") no-repeat 0px 0px;
+}
+
+#u1415:active
+{
+	background: url("../images/u1415-m.png") no-repeat 0px 0px;
+}
+
 #u1178
 {
 	vertical-align: top;
@@ -38,11 +33,31 @@
 	background: url("../images/u1178.png") no-repeat 9px 9px;
 }
 
+#u1178:hover
+{
+	background: url("../images/u1178-r.png") no-repeat 0px 0px;
+}
+
+#u1178:active
+{
+	background: url("../images/u1178-m.png") no-repeat 0px 0px;
+}
+
 #u1180
 {
 	vertical-align: top;
 	position: relative;
 	background: url("../images/u1180.png") no-repeat 9px 9px;
+}
+
+#u1180:hover
+{
+	background: url("../images/u1180-r.png") no-repeat 0px 0px;
+}
+
+#u1180:active
+{
+	background: url("../images/u1180-m.png") no-repeat 0px 0px;
 }
 
 #u1182
@@ -57,6 +72,18 @@
 	-moz-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
 	-webkit-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
 	box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+}
+
+#u1534
+{
+	vertical-align: top;
+	position: relative;
+	background: url("../images/u1534.png") no-repeat 9px 9px;
+}
+
+#u1534:hover
+{
+	background: url("../images/u1534-r.png") no-repeat 0px 0px;
 }
 
 #u1458
